--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
     
 volumes:
   mongodb:
-    driver: "local"
+    driver: local
     
 networks:
   springappnetwork:
-    external: "bridge"
+    external: bridge
